@@ -4,6 +4,7 @@ Changelog
 1.3.1 - unreleased
 ------------------
 
+- Removed ZODB cache warming code - it didn't actually help in practice.
 
 1.3.0 - 2011-07-09
 ------------------
